fixed spacing issue with error message

--- a/src/styles/FormInput.module.css
+++ b/src/styles/FormInput.module.css
@@ -8,8 +8,8 @@
 }
 
 .section-2 {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 label {
@@ -34,6 +34,6 @@ input[type="text"] {
 
 p {
   color: red;
-  margin-top: 2px;
+  /* margin-top: 2px; */
   align-self: flex-start;
 }
